creade app layout

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Polymer Posts</title>
   <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="stylesheet" href="styles.css">
-  <link rel="import" href="src/app/polymer-posts.html">
+  <link rel="import" href="src/app/route-container.html">
 </head>
 <body>
-  <polymer-posts></polymer-posts>
+  <route-container></route-container>
 </body>
 </html>
